--- a/server.js/package.json
+++ b/server.js/package.json
@@ -11,9 +11,13 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pug": "2.0.0-beta11",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
