--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "SET DEBUG=myapp:* & nodemon ./bin/www"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
