--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
